packages/jaeger-ui/src/components/SearchTracePage/SearchResults/DiffSelection.css
/*
Copyright (c) 2017 Uber Technologies, Inc.
SPDX-License-Identifier: Apache-2.0
*/

.DiffSelection.is-non-empty {
  position: sticky;
  top: 47px;
  z-index: 1;
}

.DiffSelection--message {
  background: var(--surface-secondary);
  z-index: 11;
  background: rgba(var(--interactive-primary-rgb), 0.1);
  border: 1px solid rgba(var(--interactive-primary-rgb), 0.5);
  padding: 1rem;
}

.DiffSelection--heading {
  font-size: 1rem;
}

.DiffSelection--selectedItems {
  border: 1px solid var(--border-strong);
  border-bottom: none;
}

